DIAC-2404 Spring and Java upgrade (#1663)
* mass test replacements as old implementation didn't verify anything

* checkstyle fixes to changed tests

* final change as prep for spring upgrades

* springboot 2.x -> 3.0

* springboot 3.0 -> 3.1 temp

* fix

* springboot 3.1 -> 3.2

* springboot 3.2 -> 3.3

* springboot 3.3 -> 3.4

* springboot 3.4 -> 3.5 and CcdScenarioRunnerTest with functional scenario improvements

* java 17 -> 21

* build gradle clean up

* build gradle fix

* build gradle fix

* LdUser deprecation fix

* swagger yml sonar fix

* java version fix

* fix to test checker

* attempted functional fix

* logging to see failure in scenario runner config

* checkstyle fix

* test fix

* Functional test improvements and fixes for non-running / improper tests

* fix/improvement

* checktyle

* minor update to make all case id in functional different to avoid cross contamination

* final functional fix

* bumps

* bumps

* bumps

* better jackson management

* fix

* fix

* fix

* fix

* fix

* adding local suppression file back

* fixing dependency check and CVEs

* removing unneeded suppression

* fix to scenario runner

* fix to scenario runner

* scenario fixes

* final scenario fixes

* uk.gov.hmcts.java bump

* removing false positive suppression

* owasp bump

* tomcat global bunmp

* running CcdScenarioRunnerTest concurrently

* netty bump

* fix post master merge

* fix

* fix

* altering CustomerServicesProvider to avoid concurrency

* temp fix sonar

* fixing concurrent issue

* removing temp key

* Revert "fix"

This reverts commit 0f753719

* fix