@@ -3,7 +3,8 @@ package uk.gov.service.notify;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+
 import org.junit.jupiter.api.Test;
 
 class CustomNotificationClientTest {
@@ -14,7 +15,7 @@ class CustomNotificationClientTest {
 
     @Test
     void should_return_http_connection_with_timeout() throws Exception {
-        HttpURLConnection connection = notificationClient.getConnection(new URL("http://someurl"));
+        HttpURLConnection connection = notificationClient.getConnection(URI.create("http://someurl").toURL());
 
         assertEquals(timeout, connection.getConnectTimeout());
         assertEquals(timeout, connection.getReadTimeout());
